# academika

./: .env.example  .envrc  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  docker-compose.dev.yml  main.py  pyproject.toml
api/: Dockerfile  alembic.ini  log_config.dev.yaml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2026-04-16_76410612f603_schema_inicial.py  2026-04-17_d2619e5d3ecf_schema_inicial.py  2026-05-25_d0d14a4f408a_schema_inicial.py  2026-05-25_fc6f97d5203a_schema_inicial.py  2026-05-29_a58bc63f42f6_course_prerequisite_uq_study_plan_.py  2026-05-30_d33b3d18dbb1_add_users_table.py  2026-05-30_e22a6112a67a_rename_tables_to_plural.py  2026-06-08_2fa5e9d591a3_schema_inicial.py
api/app/: config.py  errors.py  exception_handlers.py  main.py
api/app/auth/: assertions.py  dependencies.py  errors.py  tokens.py
api/app/db/: base.py  query_builder.py  session.py
api/app/importers/: utils.py
api/app/models/: __init__.py  alumno.py  alumno_carrera.py  carrera.py  correlativa.py  course.py  course_enrollment.py  course_prerequisite.py  cursada.py  degree.py  inscripcion.py  lkp_academic_status.py  lkp_enrollment_status.py  lkp_enrollment_type.py  lkp_estado_academico.py  lkp_estado_cursada.py  lkp_nivel_carrera.py  lkp_nucleo_carrera.py  lkp_tipo_cursada.py  lkp_user_role.py  materia.py  plan_de_estudio.py  planes_materias.py  student.py  study_plan.py  study_plans_courses.py  user.py
api/app/routers/: alumnos.py  auth.py  carreras.py  course_enrollments.py  courses.py  cursadas.py  degrees.py  lookups.py  materias.py  planes_de_estudio.py  students.py  study_plans.py
api/app/schemas/: alumnos.py  auth.py  carreras.py  common.py  course_enrollments.py  courses.py  cursadas.py  degrees.py  lookups.py  materias.py  planes_de_estudio.py  students.py  study_plans.py  users.py
api/app/seeds/: create_admin.py  runner.py
api/app/services/: alumnos.py  auth.py  base.py  carreras.py  course_enrollments.py  courses.py  cursadas.py  degrees.py  guarani_importer.py  mail.py  materias.py  planes_de_estudio.py  (+3 more)
api/postman/: academika.postman_collection.json
api/sample-data/: alumnos_guarani.csv  datos_personales.csv  inscripciones.csv
api/seeds/: create_admin.py  runner.py
(+64 files in other folders)
