[project]
name = "academika"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.13.0",
    "inquirerpy>=0.3.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2",
    "pyright>=1.1.408",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"
