[project]
name = "academika-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "bcrypt>=4.2",
    "fastapi[standard]>=0.115",
    "pydantic-settings>=2.7",
    "pyjwt>=2.10",
    "resend>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "uuid-utils>=0.9",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "psycopg2-binary>=2.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "testcontainers[postgres]>=4.9",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "S"]
ignore = ["S105", "S106"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["Depends", "Security", "Query", "Header", "Cookie", "Body", "Form", "File"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
